# jarvis-app

./: .env.example  .gitattributes  .gitignore  .gitmodules  README.md  clone-to-belimeai.ps1  diag-and-fix.bat  diag-and-fix.sh  fix-cors-run.bat  fix-cors.sh  fix-ollama-cors.bat  fix-ollama.bat  index.html  launch-jarvis-dev.bat  launch-jarvis.vbs  package-lock.json  package.json  pnpm-lock.yaml  setup-cockpit.sh  setup-orc.sh  setup-piper.sh
.Jules/: palette.md
.github/workflows/: android-chat-apk.yml
.jules/: bolt.md
apps/android-chat/: .gitignore  README.md  gradle.properties  settings.gradle.kts
apps/android-chat/app/: build.gradle.kts  proguard-rules.pro
apps/android-chat/app/src/main/: AndroidManifest.xml
apps/android-chat/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
apps/android-chat/app/src/main/java/com/jarvis/localchat/: MainActivity.kt
apps/android-chat/app/src/main/java/com/jarvis/localchat/llm/: ChatTemplate.kt  LlamaBridge.kt  ModelRepository.kt
apps/android-chat/app/src/main/java/com/jarvis/localchat/ui/: ChatScreen.kt  ChatViewModel.kt  Theme.kt
apps/android-chat/app/src/main/res/values/: strings.xml  themes.xml
apps/android-chat/app/src/main/res/xml/: backup_rules.xml
apps/android-chat/gradle/: libs.versions.toml
apps/minimap/: index.html  package-lock.json  package.json  vite.config.ts
apps/minimap/src/: api.ts  escape.ts  main.ts  settings.ts  styles.css
apps/minimap/src/panels/: chat.ts  jobs.ts  log.ts  settings-drawer.ts  system.ts  topbar.ts  world.ts
public/mediapipe/: vision_wasm_internal.js  vision_wasm_module_internal.js  vision_wasm_nosimd_internal.js
scripts/: jarvis-server.sh  launch-dev.cmd  launch.vbs  ollama-fix.cmd  ollama-fix.sh  wsl-mirrored-net.cmd
server/: orc_runner.py  ruflo_runner.py  server.py  synthesis.py  system_stats.py  transcription.py  vinted_runner.py
src/: main.ts  styles.css  tabs.ts  types.ts  vault.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/agents/: agents.ts
src/backends/: nvidia.ts
src/brain/: brain.ts  viz.ts  viz3d.ts
src/chat/: chat.ts  messages.ts  models.ts  oneshot.ts  research.ts  stream.ts
src/cockpit/: cockpit.ts
src/gamify/: activity.ts  hub.ts  scene.ts  triggers.ts  xp.ts
src/gestures/: gestures.ts
src/radio/: radio.ts
src/settings/: settings.ts
src/styles/: _root.css  agents.css  background.css  brain.css  call.css  camera.css  chat.css  cockpit.css  gamify.css  layout.css  radio.css  settings.css  vinted.css  workspace.css  world.css
src/three/: ambient.ts  engine.ts  post.ts
src/vinted/: vinted.ts
src/voice/: call.ts  stt.ts  tts.ts
src/workspace/: workspace.ts
src/world/: audio-hud.ts  dj.ts  finance.ts  graph.ts  librarian.ts  npcs.ts  physics.ts  sfx.ts  vault.ts  world.ts  wow.ts
